tests/spec/pat3.cue
intMap: [string]: int
intMap: {
	t1: 43
	t2: 2.4 // error: 2.4 is not an integer
}
